# lwc_chart_engine

./: .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  build-and-publish.yml  changelog.md  create-wheels.sh  dev.sh  pyproject.toml  readme.md  requirements.txt  static_charts.py  test_install.py  zz_upload.txt  zz_upload_git.sh
.agent/skills/: baseSkills.md  maintenanceSkill.md
.agent/skills/changelog_maintenance/: SKILL.md
.github/workflows/: build_wheels.yml
benchmarks/: stream_bench.py
chart_backend/: Cargo.toml  pyproject.toml
chart_backend/src/: chart.rs  drawings.rs  lib.rs  time_utils.rs
chart_engine/src-frontend/: terminal.css
chart_engine/src-frontend/js/: core.js  ui.js
chart_engine/src-frontend/js/plugins/: boxManager.js  positionToolManager.js  priceLineManager.js
chart_engine/src-tauri/: Cargo.toml  tauri.conf.json
chart_engine/src-tauri/src/: lib.rs
data/: 1d.parquet
docs/: api.md  changelog.md  pypi_publishing.md
examples/: drawing_tools.py  indicator_test.py  live_chart_emulation.py  multi_chart_layouts.py  paper_trading.py  static_charts.py  supertrend_example.py  test_install.py  ui_customization.py  verify_0_9_8.py
helpers/: create-wheels.sh  dev.sh  upload_to_git.sh
src/: build-frontend.js  package.json
src/chart_engine/: __init__.py  chart.py  chart_engine  drawings.py  indicators.py  time_utils.py
src/src-backend/: chart.rs  drawings.rs  indicators.rs  indicators.toml  lib.rs  time_utils.rs  trader.rs  types.rs
src/src-backend/indicators/: indicators.toml  mod.rs  moving_averages.rs  oscillators.rs  registry.rs  utils.rs  volatility.rs  volume.rs
src/src-frontend/: bandPlugin.js  index.dist.html  index.html  terminal.css
src/src-frontend/css/: base.css  components.css  layout.css  legend.css  panels.css  variables.css
src/src-frontend/js/: commands.js  core.js  entry.js  ui.js
src/src-frontend/js/plugins/: bandPlugin.js  boxManager.js  lineToolManager.js  markerManager.js  positionToolManager.js  priceLineManager.js  segmentedBandPlugin.js  segmentedLinePlugin.js
src/src-streamer/: Cargo.toml  pyproject.toml  readme.md
src/src-streamer/src/: lib.rs
src/src-streamer/src/modules/streamer/: candle_closed.rs  mod.rs  polars_basic.rs
src/src-tauri/: Cargo.toml  cargo_check_output.txt  check_output.txt  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: lib.rs  main.rs
tests/: test_imports.py
wheels/: chart_engine-0.3.10-cp38-abi3-win_amd64.whl  chart_engine-0.3.11-cp38-abi3-win_amd64.whl  chart_engine-0.3.6-cp312-cp312-win_amd64.whl  chart_engine-0.3.7-cp312-cp312-win_amd64.whl
