[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chart_engine"
version = "0.6.3"
description = "High-performance charting engine built with Rust and Tauri"
authors = [
    { name = "Amit Vaidya" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["charting", "rust", "tauri", "polars", "lightweight-charts"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=0.46.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/armeya25/lwc_chart_engine"
Homepage = "https://github.com/armeya25/lwc_chart_engine"

[tool.maturin]
features = ["python-bridge"]
manifest-path = "src/src-tauri/Cargo.toml"
python-source = "src"
module-name = "chart_engine.chart_engine_lib"
include = [
    "src/chart_engine/*.py",
    "src/chart_engine/chart_engine"
]
