[package]
name = "chart_backend"
version = "0.1.0"
edition = "2021"
authors = ["amit vaidya"]

[lib]
name = "chart_backend"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.9"
polars = { version = "0.48.1", features = ["parquet", "csv", "lazy", "dtype-datetime", "temporal", "strings", "timezones", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pyo3-polars = "0.21.0"
