[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chart-engine"
version = "0.1.0"
description = "SnD Charting Engine in Rust"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.46.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chart_engine"

[tool.polars]
features = ["parquet", "csv", "lazy", "dtype-datetime", "temporal", "strings", "timezones", "json"]
