[package]
name = "chart_engine"
version = "0.1.2"
description = "tauri chart window"
authors = ["amit vaidya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chart_engine_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.9"
polars = { version = "0.48.1", features = ["parquet", "csv", "lazy", "dtype-datetime", "temporal", "strings", "timezones", "json"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pyo3-polars = "0.21.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
incremental = false
