[package]
name = "streamer"
version = "0.1.0"
edition = "2021"
authors = ["amit vaidya"]

[lib]
name = "streamer"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
polars = { version = "0.46", features = ["parquet", "csv", "lazy", "dtype-datetime", "temporal", "strings", "timezones", "dynamic_group_by", "round_series"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-polars = "0.20.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
