[package]
name = "chart_engine_lib"
version = "0.3.10"
description = "tauri chart window"
authors = ["amit vaidya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chart_engine_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chart_engine"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.9"
polars = { version = "0.48.1", features = ["lazy", "dtype-datetime", "temporal", "strings", "timezones"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
pyo3 = { version = "0.24.2", optional = true, features = ["abi3-py38"] }
pyo3-polars = { version = "0.21.0", optional = true }

[features]
python-bridge = ["pyo3", "pyo3/extension-module", "pyo3-polars"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
overflow-checks = false
incremental = false
